--- a/Template1/example1.html
+++ b/Template1/example1.html
@@ -31,7 +31,7 @@
          
     </style>
     <script type="text/javascript" src="../../../st2/sencha-touch.js"></script>
-    <script type="text/javascript" src="example3.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 
